--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 <head>
 	<link rel="stylesheet" href="Navbar.css">
+	<script src ="navbar.js"></script>
 	<title>Demonstration</title>	
 	<META>
 </head>
