--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 	<link rel="stylesheet" href="Navbar.css">
-	<script src ="navbar.js"></script>
+	<script src ="Navbar.js"></script>
 	<title>Demonstration</title>	
 	<META>
 </head>
