--- a/index.html
+++ b/index.html
@@ -1,6 +1,12 @@
 <head>
 <link rel= "stylesheet" type="text/css" href="Navbar.css">
 <script src ="navbar.js"></script>
+
+	<link rel="stylesheet" href="C:\Users\Anirudh Nagraj\Documents\GitHub\main\Navbar.css">
+	<script src ="C:\Users\Anirudh Nagraj\Documents\GitHub\main\Navbar.js">
+	</script>
+	<title>Demonstration</title>	
+	<META>
 </head>
 <body>
 <header class="topnav" id="myTopnav">
