--- a/index.html
+++ b/index.html
@@ -1,22 +1,11 @@
 <head>
-<<<<<<< HEAD
-	<link rel="stylesheet" href="Navbar.css">
-	<script src ="Navbar.js"></script>
-	<title>Demonstration</title>	
-	<META>
-=======
-<link rel= "stylesheet" type="text/css" href="Navbar.css">
-<script src ="navbar.js"></script>
-<<<<<<< HEAD
->>>>>>> Test
-=======
 
 	<link rel="stylesheet" href="C:\Users\Anirudh Nagraj\Documents\GitHub\main\Navbar.css">
 	<script src ="C:\Users\Anirudh Nagraj\Documents\GitHub\main\Navbar.js">
 	</script>
-	<title>Demonstration</title>	
+	<title>Home</title>	
 	<META>
->>>>>>> Test
+
 </head>
 <body>
 <header class="topnav" id="myTopnav">
