--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <head>
 
 	<link rel="stylesheet" href="C:\Users\Anirudh Nagraj\Documents\GitHub\main\Navbar.css">
+	<link rel="stylesheet" href="C:\Users\Anirudh Nagraj\Documents\GitHub\main\frontpage.css">
 	<script src ="C:\Users\Anirudh Nagraj\Documents\GitHub\main\Navbar.js">
 	</script>
 	<title>Home</title>	
@@ -22,4 +23,28 @@
             </a>
         </div>
     </header>
+	
+<div style="height:45px" aria-hidden="true" class="wp-block-spacer"></div>
+
+<h2 class="has-text-align-left">Hello! I am Anirudh.</h2>
+<p>I am a Master's student studying Human-Centered Computing at the <strong>University of Maryland, Baltimore County</strong>. My primary work sits at the intersection of user research and accessibility.</p>
+<p>My work process is very simple.</p>
+
+<p class="has-medium-font-size"><strong>Research <i class="fas fa-arrow-right"></i> Apply <i class="fas fa-arrow-right"></i> Create</strong></p>
+ 
+<hr class="wp-block-separator has-text-color has-background has-vivid-red-background-color has-vivid-red-color is-style-dots"/>
+ 
+<p class="has-text-align-justify">Under the guidance of <a href="https://userpages.umbc.edu/~rkuber/index.htm">Dr.Ravi Kuber</a>, I am currently investigating the navigational habits of individuals who are blind in India. Using the data collected, we propose to run participatory design sessions to develop insights for future assistive technologies. </p>
+
+<p class="has-text-align-justify"><strong>I am currently on the lookout for jobs. I am keen to work on user research, accessibility, and human-computer interaction. </strong> </p>
+ 
+<p>View some of my work <a href="https://anirudhnagraj.com/projects-2/">here</a>! </p>
+
+<p class="has-text-align-left">Email me at <strong><a href="anagraj1@umbc.edu">anagraj1@umbc.edu</a></strong> or follow me on social media.</p>
+  
+<h3 class="has-text-color" style="color:#476bd8"><strong>NEWS:</strong></h3>
+
+<p style="font-size:18px">Paper titled 'Investigating the navigational habits of individuals who are blind in India' submitted to ACM-CHI, awaiting results.</p>
+  
+	
 	</body>
