--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             <img src="C:\Users\Anirudh Nagraj\Documents\GitHub\main\assets\img\Personal\Main image.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content">
-            <h3>UI/UX Designer &amp; Web Developer.</h3>
+            <h3>UX Researcher &amp; Accessibility Designer.</h3>
             <p class="font-italic">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
               magna aliqua.
