--- a/index.html
+++ b/index.html
@@ -93,8 +93,7 @@
               magna aliqua.
             </p>
             <p>
-              Officiis eligendi itaque labore et dolorum mollitia officiis optio vero. Quisquam sunt adipisci omnis et ut. Nulla accusantium dolor incidunt officia tempore. Et eius omnis.
-              Cupiditate ut dicta maxime officiis quidem quia. Sed et consectetur qui quia repellendus itaque neque. Aliquid amet quidem ut quaerat cupiditate. Ab et eum qui repellendus omnis culpa magni laudantium dolores.
+              I have been involved in research on accessibility from the time I joined the university and I am currently investigating the navigational habits of people who are blind. I intend to look at ways in which a user-centered approach can increase accessibility. Through the data collected, I intend to look at ways in which participatory design can be incorporated with such an audience. My projects have taken me from blind schools to house-holds with acute water shortages to sitting on an office chair, working on company projects, to sitting in a classroom again ; only this time, I ponder on how to make people’s lives easier through better design through my efforts in the world of UX.
             </p>
           </div>
         </div>
