--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Anirudh Nagraj Portfolio</title>
+  <title>Anirudh Nagraj - Home</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -92,7 +92,7 @@
               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
               magna aliqua.
             </p>
-            <p>
+            <p class="justified">
               I have been involved in research on accessibility from the time I joined the university and I am currently investigating the navigational habits of people who are blind. I intend to look at ways in which a user-centered approach can increase accessibility. Through the data collected, I intend to look at ways in which participatory design can be incorporated with such an audience. My projects have taken me from blind schools to house-holds with acute water shortages to sitting on an office chair, working on company projects, to sitting in a classroom again ; only this time, I ponder on how to make people’s lives easier through better design through my efforts in the world of UX.
             </p>
           </div>
