--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <link href="assets/vendor/aos/aos.css" rel="stylesheet">
 
   <!-- Template Main CSS File -->
-  <link href="assets/css/style.css" rel="stylesheet">
+  <link href="C:\Users\Anirudh Nagraj\Documents\GitHub\main\assets\css\style.css" rel="stylesheet">
 
   <!-- =======================================================
   * Template Name: MyResume - v2.2.0
@@ -79,7 +79,7 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p>I am Anirudh Nagraj, an aspiring User Experience Professional. From a very young age, I have been drawn towards accessibility, and how I can be of help to people. Before I stepped foot into the world of UX, I was employed as a Software Developer at LTI. That gig was cool but it rocked me to my core, and significantly altered my thought process. I started questioning stuff instead of simply going ahead with specifics. This led to me to touch my passion waters again and pursue a master’s degree in Human-Centered Computing </p>
+          <p class ="justified">I am Anirudh Nagraj, an aspiring User Experience Professional. From a very young age, I have been drawn towards accessibility, and how I can be of help to people. Before I stepped foot into the world of UX, I was employed as a Software Developer at LTI. That gig was cool but it rocked me to my core, and significantly altered my thought process. I started questioning stuff instead of simply going ahead with specifics. This led to me to touch my passion waters again and pursue a master’s degree in Human-Centered Computing </p>
         </div>
 
         <div class="row">
