--- a/index.html
+++ b/index.html
@@ -79,7 +79,8 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p class ="justified">I am Anirudh Nagraj, an aspiring User Experience Professional. From a very young age, I have been drawn towards accessibility, and how I can be of help to people. Before I stepped foot into the world of UX, I was employed as a Software Developer at LTI. That gig was cool but it rocked me to my core, and significantly altered my thought process. I started questioning stuff instead of simply going ahead with specifics. This led to me to touch my passion waters again and pursue a master’s degree in Human-Centered Computing </p>
+          <p class ="justified">
+		  I am Anirudh Nagraj, an aspiring User Experience Professional. From a very young age, I have been drawn towards accessibility, and how I can be of help to people. Before I stepped foot into the world of UX, I was employed as a Software Developer at LTI. That gig was cool but it rocked me to my core, and significantly altered my thought process. I started questioning stuff instead of simply going ahead with specifics. This led to me to touch my passion waters again and pursue a master’s degree in Human-Centered Computing </p>
         </div>
 
         <div class="row">
@@ -87,11 +88,7 @@
             <img src="C:\Users\Anirudh Nagraj\Documents\GitHub\main\assets\img\Personal\Main image.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content">
-            <h3>UX Researcher &amp; Accessibility Designer.</h3>
-            <p class="font-italic">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-              magna aliqua.
-            </p>
+            <h3>UX Research &amp; Accessibility Design.</h3>
             <p class="justified">
               I have been involved in research on accessibility from the time I joined the university and I am currently investigating the navigational habits of people who are blind. I intend to look at ways in which a user-centered approach can increase accessibility. Through the data collected, I intend to look at ways in which participatory design can be incorporated with such an audience. My projects have taken me from blind schools to house-holds with acute water shortages to sitting on an office chair, working on company projects, to sitting in a classroom again ; only this time, I ponder on how to make people’s lives easier through better design through my efforts in the world of UX.
             </p>
