--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             <img src="C:\Users\Anirudh Nagraj\Documents\GitHub\main\assets\img\Personal\Main image.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content">
-            <h3>UX Research &amp; Accessibility Design.</h3>
+            <h3>UX Research &amp; Accessibility Design</h3>
             <p class="justified">
               I have been involved in research on accessibility from the time I joined the university and I am currently investigating the navigational habits of people who are blind. I intend to look at ways in which a user-centered approach can increase accessibility. Through the data collected, I intend to look at ways in which participatory design can be incorporated with such an audience. My projects have taken me from blind schools to house-holds with acute water shortages to sitting on an office chair, working on company projects, to sitting in a classroom again ; only this time, I ponder on how to make people’s lives easier through better design through my efforts in the world of UX.
             </p>
