--- a/index.html
+++ b/index.html
@@ -309,58 +309,76 @@
 
         <div class="section-title">
           <h2>Resume</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
         </div>
 
         <div class="row">
           <div class="col-lg-6">
             <h3 class="resume-title">Sumary</h3>
             <div class="resume-item pb-0">
-              <h4>Brandon Johnson</h4>
-              <p><em>Innovative and deadline-driven Graphic Designer with 3+ years of experience designing and developing user-centered digital/print marketing material from initial concept to final, polished deliverable.</em></p>
-              <ul>
-                <li>Portland par 127,Orlando, FL</li>
-                <li>(123) 456-7891</li>
-                <li>alice.barkley@example.com</li>
-              </ul>
+              <h4>Anirudh Nagraj</h4>
+              <p><em> Innovative and research driven individual with 2 years of corporate experience.Keen to work with the results obtained from thorough user research to build better products.</em></p> 
             </div>
 
             <h3 class="resume-title">Education</h3>
             <div class="resume-item">
-              <h4>Master of Fine Arts &amp; Graphic Design</h4>
-              <h5>2015 - 2016</h5>
-              <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
-              <p>Qui deserunt veniam. Et sed aliquam labore tempore sed quisquam iusto autem sit. Ea vero voluptatum qui ut dignissimos deleniti nerada porti sand markend</p>
+              <h4>Master of Science, Human-Centered Computing</h4>
+              <h5>2019-Present</h5>
+              <p><em>University of Maryland, Baltimore County</em></p>
             </div>
             <div class="resume-item">
-              <h4>Bachelor of Fine Arts &amp; Graphic Design</h4>
-              <h5>2010 - 2014</h5>
-              <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
-              <p>Quia nobis sequi est occaecati aut. Repudiandae et iusto quae reiciendis et quis Eius vel ratione eius unde vitae rerum voluptates asperiores voluptatem Earum molestiae consequatur neque etlon sader mart dila</p>
+              <h4>Bachelor of Engineering, Information Science and Engineering</h4>
+              <h5>2013-2017</h5>
+              <p><em>R V College of Engineering, Bangalore, India</em></p>
+            </div>
+			
+			<h3 class="resume-title">Skills</h3>
+            <div class="resume-item">
+              <h4>USER RESEARCH</h4>
+			  <h6>Contextual Inquiry, User Interviews, Qualitative Coding, Usability Testing, Heuristic Evaluations, Affinity Mapping, Participatory Design</h6>
+             </div>
+            <div class="resume-item">
+              <h4>UX DESIGN</h4>
+			  <h6>Storyboards, Wireframing, User Journeys, Information Architecture, Brainstorming, Prototyping, User Personas, Whiteboarding, Interaction Design, JTBD Framework, Accessibility</h6>
+            </div>
+			<div class="resume-item">
+              <h4>TOOLS</h4>
+			  <h6>Adobe XD, Figma, InVision, Sketch, Balsamiq Mockups, Adobe Photoshop, JIRA, Airtable</h6>
+            </div>
+			<div class="resume-item">
+              <h4>PROGRAMMING</h4>
+			  <h6>HTML, CSS, JavaScript</h6>
             </div>
           </div>
+		  
           <div class="col-lg-6">
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
-              <h4>Senior graphic design specialist</h4>
+              <h4>Web Developer , College Of Engineering and Technology - Shared Services Center</h4>
               <h5>2019 - Present</h5>
-              <p><em>Experion, New York, NY </em></p>
+              <p><em>University of Maryland, Baltimore County </em></p>
               <ul>
-                <li>Lead in the design, development, and implementation of the graphic, layout, and production communication materials</li>
-                <li>Delegate tasks to the 7 members of the design team and provide counsel on all aspects of the project. </li>
-                <li>Supervise the assessment of all graphic materials in order to ensure quality and accuracy of the design</li>
-                <li>Oversee the efficient use of production project budgets ranging from $2,000 - $25,000</li>
+                <li>Lead user researcher of the COEIT SSC team. Responsible for carrying out methodologies like user interviews, contextual inquiries, heuristic evaluations etc., to improve the overall usability.</li>
+                <li>Using Performance metrics and Google Analytics to track the number of users. Use collected data to incorporate changes to increase audience flow. </li>
+                <li>Employ HTML, CSS, JavaScript, integrating with Kanban to track project tasks and deliverables. </li>
+                <li>Airtable is used for data aggregation and analysis.</li>
               </ul>
             </div>
             <div class="resume-item">
-              <h4>Graphic design specialist</h4>
-              <h5>2017 - 2018</h5>
-              <p><em>Stepping Stone Advertising, New York, NY</em></p>
+              <h4>GRADUATE RESEARCH ASSISTANT </h4>
+              <h5>2019-2020</h5>
+              <p><em>University of Maryland, Baltimore County</em></p>
               <ul>
-                <li>Developed numerous marketing programs (logos, brochures,infographics, presentations, and advertisements).</li>
-                <li>Managed up to 5 projects or tasks at a given time while under pressure</li>
-                <li>Recommended and consulted with clients on the most appropriate graphic design</li>
-                <li>Created 4+ design presentations and proposals a month for clients and account managers</li>
+                <li>Investigated the navigational habits of individuals who are blind in low- and medium-income countries and drew insights from the various findings based on interviews to provide references for future assistive technologies in the navigational space.</li>
+              </ul>
+            </div>
+			            <div class="resume-item">
+              <h4>SOFTWARE ENGINEER [DEV|INSURANCE]</h4>
+              <h5>2017 - 2019</h5>
+              <p><em> LTI (A Larsen and Toubro Group Company), Bangalore, India</em></p>
+              <ul>
+                <li>I have worked with multiple clients of LTI (a Larsen and Toubro group company) in a cross-functional setup with knowledge of Adobe Experience Manager (a web content management tool) to create interactive web applications in the insurance domain. </li>
+                <li>Used HTML, CSS, JavaScript combined with the working knowledge of SQL to aid the integration of several features of the application. </li>
+                <li>Responsible for the quality delivery of functionalities on a timely basis by incorporating the AGILE method of software development. </li>
               </ul>
             </div>
           </div>
@@ -369,72 +387,7 @@
       </div>
     </section><!-- End Resume Section -->
 	
-	<!-- ======= Skills Section ======= -->
-    <section id="skills" class="skills section-bg">
-      <div class="container" data-aos="fade-up">
-
-        <div class="section-title">
-          <h2>Skills</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
-        </div>
-
-        <div class="row skills-content">
-
-          <div class="col-lg-6">
-
-            <div class="progress">
-              <span class="skill">HTML <i class="val">100%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
-            </div>
-
-            <div class="progress">
-              <span class="skill">CSS <i class="val">90%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
-            </div>
-
-            <div class="progress">
-              <span class="skill">JavaScript <i class="val">75%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
-            </div>
-
-          </div>
-
-          <div class="col-lg-6">
-
-            <div class="progress">
-              <span class="skill">PHP <i class="val">80%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
-            </div>
-
-            <div class="progress">
-              <span class="skill">WordPress/CMS <i class="val">90%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
-            </div>
-
-            <div class="progress">
-              <span class="skill">Photoshop <i class="val">55%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
-            </div>
-
-          </div>
-
-        </div>
-
-      </div>
-    </section><!-- End Skills Section -->
-
+	
     <!-- ======= Services Section ======= -->
     <section id="services" class="services">
       <div class="container" data-aos="fade-up">
