--- a/index.html
+++ b/index.html
@@ -216,12 +216,12 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-web filter-card">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-5.jpg" class="img-fluid" alt="">
+              <img src="C:/Users/Anirudh Nagraj/Documents/GitHub/main/assets/img/Personal/SUN1.png" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>College of Engineering and Information technology - Shared Services Center Website</h4>
                 <p>Web</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/portfolio-5.jpg" data-gall="portfolioGallery" class="venobox" title="Web 2"><i class="bx bx-plus"></i></a>
+                  <a href="C:/Users/Anirudh Nagraj/Documents/GitHub/main/assets/img/Personal/SUN1.png" data-gall="portfolioGallery" class="venobox" title="Web 2"><i class="bx bx-plus"></i></a>
                   <a href="portfolio-details.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe" class="venobox" title="Portfolio Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
@@ -296,7 +296,7 @@
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
               <h4>Web Developer , College Of Engineering and Technology - Shared Services Center</h4>
-              <h5>2019 - Present</h5>
+              <h5>2020 - Present</h5>
               <p><em>University of Maryland, Baltimore County </em></p>
               <ul>
                 <li>Lead user researcher of the COEIT SSC team. Responsible for carrying out methodologies like user interviews, contextual inquiries, heuristic evaluations etc., to improve the overall usability.</li>
