--- a/navigational-aid.html
+++ b/navigational-aid.html
@@ -46,7 +46,7 @@
         <div class="row">
 
           <div class="col-lg-8">
-            <h2 class="portfolio-title">This is an example of portfolio detail</h2>
+            <h2 class="portfolio-title">Navigational Aid for runners who are blind - TRIDENT</h2>
             <div class="owl-carousel portfolio-details-carousel">
               <img src="assets/img/portfolio/portfolio-details-1.jpg" class="img-fluid" alt="">
               <img src="assets/img/portfolio/portfolio-details-2.jpg" class="img-fluid" alt="">
@@ -55,7 +55,7 @@
           </div>
 
           <div class="col-lg-4 portfolio-info">
-            <h3>Project information</h3>
+            <h3>Some General Information</h3>
             <ul>
               <li><strong>Category</strong>: Web design</li>
               <li><strong>Client</strong>: ASU Company</li>
