--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="C:/Users/Anirudh Nagraj/Documents/GitHub/main/assets/img/Personal/Logo.jpg" rel="icon">
+  <link href="C:/Users/Anirudh Nagraj/Documents/GitHub/main/assets/img/Personal/Logo.png" rel="icon">
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
