--- a/navigational-aid.html
+++ b/navigational-aid.html
@@ -10,7 +10,7 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
+  <link href="C:/Users/Anirudh Nagraj/Documents/GitHub/main/assets/img/Personal/Logo.png" rel="icon">
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
@@ -25,7 +25,7 @@
   <link href="assets/vendor/aos/aos.css" rel="stylesheet">
 
   <!-- Template Main CSS File -->
-  <link href="assets/css/style.css" rel="stylesheet">
+  <link href="C:\Users\Anirudh Nagraj\Documents\GitHub\main\assets\css\style.css" rel="stylesheet">
 
   <!-- =======================================================
   * Template Name: MyResume - v2.2.0
@@ -57,14 +57,14 @@
           <div class="col-lg-4 portfolio-info">
             <h3>Some General Information</h3>
             <ul>
-              <li><strong>Category</strong>: Web design</li>
-              <li><strong>Client</strong>: ASU Company</li>
-              <li><strong>Project date</strong>: 01 March, 2020</li>
-              <li><strong>Project URL</strong>: <a href="#">www.example.com</a></li>
+              <li><strong>Categories</strong>: Accessibility, Wearable Technology, User-Centered Design</li>
+              <li><strong>User Base</strong>: Runners who are blind</li>
+              <li><strong>Project Timeline</strong>: 2020 - January to December</li>
+              <li><strong>Team Members</strong>: 4 students and 1 faculty </a></li>
             </ul>
 
-            <p>
-              Autem ipsum nam porro corporis rerum. Quis eos dolorem eos itaque inventore commodi labore quia quia. Exercitationem repudiandae officiis neque suscipit non officia eaque itaque enim. Voluptatem officia accusantium nesciunt est omnis tempora consectetur dignissimos. Sequi nulla at esse enim cum deserunt eius.
+            <p class="justified">
+             <b>TRIDENT</b> stands for Tri-Positional Detection and Navigational Technology. The key features of the system include enhanced awareness of surroundings, detection of obstacles above and below the waist, modes for long and short range detection and choice of output. These features have been determined from interviews conducted with blind joggers and runners
             </p>
           </div>
 
