--- a/navigational-aid.html
+++ b/navigational-aid.html
@@ -46,7 +46,7 @@
         <div class="row">
 
           <div class="col-lg-8">
-            <h2 class="portfolio-title">Navigational Aid for runners who are blind - TRIDENT</h2>
+            <h1 class="portfolio-title">Navigational Aid for runners who are blind - TRIDENT</h1>
             <div class="owl-carousel portfolio-details-carousel">
               <img src="assets/img/portfolio/portfolio-details-1.jpg" class="img-fluid" alt="">
               <img src="assets/img/portfolio/portfolio-details-2.jpg" class="img-fluid" alt="">
@@ -54,8 +54,8 @@
             </div>
           </div>
 
-          <div class="col-lg-4 portfolio-info">
-            <h3>Some General Information</h3>
+          <div class="col-lg-4 portfolio-info introbox">
+            <h3 class="projectbox"><b>PROJECT INFORMATION</b></h3>
             <ul>
               <li><strong>Categories</strong>: Accessibility, Wearable Technology, User-Centered Design</li>
               <li><strong>User Base</strong>: Runners who are blind</li>
@@ -72,7 +72,23 @@
 
       </div>
     </section><!-- End Portfolio Details -->
+	
+	<section id="portfolio-details" class="portfolio-details">
+      <div class="container" data-aos="fade-up">
 
+          <div>
+          <h2 class="prototype-introduction">INTRODUCTION</h2>
+          </div>
+          <p class="justified">
+             So I would like you to imagine a scenario where you are jogging a long route. You are working hard to maintain your pace, focusing on your breathing, and listening to loud upbeat music to motivate yourself to keep going. With all that’s going on, it can be easy to miss other runners or cyclists passing behind you and dips or hazards on the path which can impede your run. These factors can prove even more of a challenge if you are blind. </p>
+          </div>
+
+        </div>
+
+      </div>
+    </section><!-- End Portfolio Details -->
+	
+	
   </main><!-- End #main -->
 
   <a href="#" class="back-to-top"><i class="bx bx-up-arrow-alt"></i></a>
