--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="C:/Users/Anirudh Nagraj/Documents/GitHub/main/assets/img/Personal/Logo.png" rel="icon">
+  <link href="assets/img/Personal/Logo.png" rel="icon">
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
@@ -25,7 +25,7 @@
   <link href="assets/vendor/aos/aos.css" rel="stylesheet">
 
   <!-- Template Main CSS File -->
-  <link href="C:\Users\Anirudh Nagraj\Documents\GitHub\main\assets\css\style.css" rel="stylesheet">
+  <link href="assets\css\style.css" rel="stylesheet">
 
   <!-- =======================================================
   * Template Name: MyResume - v2.2.0
@@ -167,12 +167,12 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
-              <img src="C:/Users/Anirudh Nagraj/Documents/GitHub/main/assets/img/Personal/Prototype.png" class="img-fluid" alt="">
+              <img src="assets/img/Personal/Prototype.png" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4><b>Navigational device for individuals who are blind</b></h4>
                 <p>Wearable, Accessibilty</p>
                 <div class="portfolio-links">
-                  <a href="C:/Users/Anirudh Nagraj/Documents/GitHub/main/assets/img/Personal/Prototype.png" data-gall="portfolioGallery" class="venobox" title="Prototype Cartoon"><i class="bx bx-plus"></i></a>
+                  <a href="assets/img/Personal/Prototype.png" data-gall="portfolioGallery" class="venobox" title="Prototype Cartoon"><i class="bx bx-plus"></i></a>
                   <a href="#" data-gall="portfolioDetailsGallery" data-vbtype="iframe" class="venobox" title="Portfolio Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
@@ -181,7 +181,7 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-web filter-card">
             <div class="portfolio-wrap">
-              <img src="C:/Users/Anirudh Nagraj/Documents/GitHub/main/assets/img/Personal/COEIT1.png" class="img-fluid" alt="">
+              <img src="assets/img/Personal/COEIT1.png" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4><b>College of Engineering and Information technology - Research Website</b></h4>
                 <p>Web, User Research</p>
@@ -195,7 +195,7 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
-              <img src="C:/Users/Anirudh Nagraj/Documents/GitHub/main/assets/img/Personal/appdc.png" class="img-fluid" alt="">
+              <img src="assets/img/Personal/appdc.png" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4><b>Application for individuals who are blind<b></h4>
                 <p>App</p>
