--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
         <div class="row">
           <div class="col-lg-4">
-            <img src="assets\img\Personal\Main image.jpg" class="img-fluid" alt="">
+            <img src="assets\img\Personal\Main image.JPG" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content">
             <h3>UX Research &amp; Accessibility Design</h3>
