--- a/navigational-aid.html
+++ b/navigational-aid.html
@@ -25,7 +25,7 @@
   <link href="assets/vendor/aos/aos.css" rel="stylesheet">
 
   <!-- Template Main CSS File -->
-  <link href="C:\Users\Anirudh Nagraj\Documents\GitHub\main\assets\css\style.css" rel="stylesheet">
+  <link href="assets\css\style.css" rel="stylesheet">
 
   <!-- =======================================================
   * Template Name: MyResume - v2.2.0
