--- a/navigational-aid.html
+++ b/navigational-aid.html
@@ -55,13 +55,9 @@
 
         <div class="row">
 
-          <div class="col-lg-8">
-            <h1 class="portfolio-title">Navigational Aid for runners who are blind - TRIDENT</h1>
-            <div class="owl-carousel portfolio-details-carousel">
-              <img src="assets/img/portfolio/portfolio-details-1.jpg" class="img-fluid" alt="">
-              <img src="assets/img/portfolio/portfolio-details-2.jpg" class="img-fluid" alt="">
-              <img src="assets/img/portfolio/portfolio-details-3.jpg" class="img-fluid" alt="">
-            </div>
+          <div class="col-lg-8 titlebox">
+            <h1 class="portfolio-title1">Navigational Aid for runners who are blind - TRIDENT</h1>
+            
           </div>
 
           <div class="col-lg-4 portfolio-info introbox">
@@ -84,35 +80,58 @@
     </section><!-- End Portfolio Details -->
 	
 	<!-- ======= INTRODUCTION Details ======= -->
-	<section id="portfolio-details" class="portfolio-details">
+	<section>
       <div class="container" data-aos="fade-up">
-
+	<h2 class="portfolio-title"><b>EMI AND HIS PROBLEM</b></h2>
 		  <div class ="row">
 		  <div class ="col-md-2">
 		  <img src="assets/img/Personal/avatar1.png" class="img-fluid avatar" alt="">
           </div>
 		  <div class="col-md-10">
 		  <p class="justified">
-            <span class = "introtext"> Meet Emi, a 38 year old runner who is visually impaired. He wants a device that can help him detect obstacles while running. So he came to us for help. </span> </p>
-			<span class = "introtext"> and we decided to build a device for him. </span> </p>
+            <span class = "introtext"> Meet <b>Emi</b>, a 38 year old runner who is <span>visually impaired. He wants a device that can help him detect obstacles while running. </span> </p>
+			<span class = "introtext"> His main problem, he says is with moving obstacles and ones at head height. He finds it hard to concentrate on the path because of the obstacles. To alleviate some of his problems, he approached us for help. </span></p>
+			<span class = "introtext"> So we decided to build a device for him. </span> </p>
           </div>
 		</div>
         </div>
     </section><!-- End Portfolio Details -->
 	
-	<section id="portfolio-details" class="portfolio-details">
+	<!-- ======= Requirements Details ======= -->
+	<section id="requirements">
       <div class="container" data-aos="fade-up">
-
           <div>
-          <h2 class="prototype-introduction" id="requirements">So what are Emi's base requirements?</h2>
+          <h2 class="prototype-introduction" id="requirements"><b>So what are Emi's base requirements?</b></h2>
           </div>
 		  <p class="justified">
             <span class = "introtext"> Emi wants a device that relies on haptics and uses sensors to detect obstacles. He also wants it to be non-invasive and portable so that it does not hinder his run.</span> </p>
-          </div>
-		</div>
-        </div>
+          </div> 
     </section>
 	
+	<!-- End Requirements Details -->
+	
+	<!-- ======= Requirements Details ======= -->
+	<section>
+      <div class="container" data-aos="fade-up">
+          <div>
+          <h2 class="prototype-introduction"><b>Research Questions.</b></h2>
+          </div>
+		  <p class="justified">
+            <span class = "introtext"> Emi gave his requirements, now we had a job on our hands. The time had come to create a list of <span class="irqhighlight">initial research questions</span>.</span> </p>
+          </div> 
+    </section>
+	
+	<!-- End Requirements Details -->
+	
+	<section id="process">
+      <div class="container" data-aos="fade-up">
+          <div>
+          <h2 class="prototype-process" id="process"><b>Initial Whiteboarding</b></h2>
+          </div>
+		  <p class="justified">
+            <span class = "introtext"> Our team sat together for round table discussions and whiteboarding. Keeping Emi's initial requirements in mind, we came up with a defined process, and a set of scenarios to aid future work. 	</span> </p>
+          </div> 
+    </section>
 	
   </main><!-- End #main -->
   
