--- a/navigational-aid.html
+++ b/navigational-aid.html
@@ -25,28 +25,12 @@
 
   <!-- Template Main CSS File -->
   <link href="assets\css\style.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
 </head>
 
 <body>
 
-	<!-- ======= Mobile nav toggle button ======= -->
-  <button type="button" class="mobile-nav-toggle d-xl-none"><i class="icofont-navigation-menu"></i></button>
-
-  <!-- ======= Header ======= -->
-  <header id="header" class="d-flex flex-column justify-content-center">
-
-    <nav class="nav-menu">
-      <ul>
-        <li class="active"><a href="#portfolio-details"><i class="bx bx-home"></i> <span>Home</span></a></li>
-        <li><a href="#requirements"><i class='bx bxs-data'></i><span>Requirements</span></a></li>
-        <li><a href="#process"><i class='bx bxl-product-hunt' ></i> <span>Process</span></a></li>
-		<li><a href="#resume"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
-        <!-- <li><a href="#contact"><i class="bx bx-envelope"></i> <span>Contact</span></a></li> -->
-      </ul>
-    </nav><!-- .nav-menu -->
-
-  </header><!-- End Header -->
   <main id="main">
 
     <!-- ======= Portfolio Details ======= -->
@@ -136,6 +120,8 @@
 	
   </main><!-- End #main -->
   
+  
+  
    <!-- ======= Footer ======= -->
   <footer id="footer">
     <div class="container">
@@ -172,6 +158,7 @@
 
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
+  <script src="assets/js/carousel.js"></script>
 
 </body>
 
