--- a/index.html
+++ b/index.html
@@ -122,8 +122,8 @@
           <div class="col-lg-3 col-md-6 mt-5 mt-md-0">
             <div class="count-box">
               <i class="icofont-users-alt-5"></i>
-              <span data-toggle="counter-up">40</span>
-              <p>Interviews and counting</p>
+              <span data-toggle="counter-up">50</span>
+              <p>users interviewed and counting</p>
             </div>
           </div>
 
